--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "react": "18.2.0",
     "react-native": "0.74.1",
     "react-native-picker-select": "^9.1.3",
+    "react-native-qrcode-svg": "^6.3.1",
     "react-native-safe-area-context": "4.10.1",
+    "react-native-share": "^10.2.1",
     "react-redux": "^9.1.2",
     "redux": "^5.0.1"
   },
