--- a/package.json
+++ b/package.json
@@ -16,8 +16,12 @@
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-qrcode-svg": "^6.3.1",
     "react-native-safe-area-context": "^4.10.1",
-    "react-native-screens": "3.31.1"
+    "react-native-screen-brightness": "^2.0.0-alpha",
+    "react-native-screens": "3.31.1",
+    "react-redux": "^9.1.2",
+    "redux": "^5.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
