--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
   "dependencies": {
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
-    "expo": "^51.0.2",
-    "expo-image": "^1.10.6",
-    "expo-status-bar": "~1.11.1",
+    "expo": "~51.0.14",
+    "expo-image": "~1.12.12",
+    "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
-    "react-native": "0.73.6",
+    "react-native": "0.74.2",
     "react-native-qrcode-svg": "^6.3.1",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screen-brightness": "^2.0.0-alpha",
