--- a/package.json
+++ b/package.json
@@ -11,14 +11,14 @@
   "dependencies": {
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
-    "expo": "~51.0.14",
+    "expo": "^51.0.0",
     "expo-image": "~1.12.12",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.2",
+    "react-native-paper": "^5.12.3",
     "react-native-qrcode-svg": "^6.3.1",
-    "react-native-safe-area-context": "^4.10.1",
-    "react-native-screen-brightness": "^2.0.0-alpha",
+    "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
     "react-redux": "^9.1.2",
     "redux": "^5.0.1"
